<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/guitar_lesp_backgr"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ExtrasActivity" >

    <TextView
        android:id="@+id/txtExtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/txtExtras"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnRockNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtExtras"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:onClick="onRockNewsClick"
        android:text="@string/lblRockNews" />

    <Button
        android:id="@+id/btnRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnRockNews"
        android:layout_alignRight="@+id/btnRockNews"
        android:layout_below="@+id/btnRockNews"
        android:layout_marginTop="52dp"
        android:onClick="onRecordClick"
        android:text="@string/lblRecordBtn" />

    <TextView
        android:id="@+id/lblRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRockNews"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/lblRecord" />

    <TextView
        android:id="@+id/txtNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtExtras"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/txtNews" />

    <Button
        android:id="@+id/btnShopGuitars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRecord"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:onClick="onShopGuitarsClick"
        android:text="@string/lblShopGuitars" />

    <TextView
        android:id="@+id/txtShopGuitars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRecord"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/txtShopGuitars" />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btnRecord"
        android:onClick="onReturnHomeClick"
        android:text="@string/main_menu" />

</RelativeLayout>
