<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/txtShopGuitars"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ShopGuitarsActivity" >

    <WebView
        android:id="@+id/wvShopGuitars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnBackExtras2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/btnBackExtras2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onBackToExtrasClick"
        android:text="@string/lblBackExtras" />

    <ImageView
        android:id="@+id/imgGuitarNeck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/wvShopGuitars"
        android:layout_alignLeft="@+id/wvShopGuitars"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/description_guitar"
        android:src="@drawable/strings_only" />

</RelativeLayout>
